# ProyectoGradoClion

./: .gitignore  CMakeLists.txt
Files/: fileCompressed.fast5  file_repacked.fast5  ganamo.txt  herrorc.txt  huffmanTree.txt  newFile_copy.fast5  newFile_repacked.fast5  newFile_repacked_deCompressed.fast5
headers/: compresser.hpp  compressor.hpp  errorHandler.hpp  h5_repack_copy.hpp  h5trav.hpp  hdfalloc.hpp  herror.hpp  huffman.hpp  inputOutput.hpp  repack.hpp  stats.hpp  threadPool.hpp  utils.hpp
libs/h5repack/: h5_repack_copy.hpp  h5repack_copy.cpp  h5trav.cpp  h5trav.hpp
sources/: compresser.cpp  compressor.cpp  errorHandler.cpp  h5Array.cpp  h5repack_copy.cpp  h5trav.cpp  hdfalloc.cpp  herror.cpp  huffman.cpp  inputOutput.cpp  main.cpp  repack.cpp  stats.cpp  utils.cpp
